--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notes-app-reactive",
+  "name": "Closing-Notes",
   "version": "0.1.0",
   "private": true,
   "main": "src/electron.js",
@@ -18,10 +18,17 @@
     }
   ],
   "dependencies": {
+    "@date-io/date-fns": "^1.1.0",
+    "@material-ui/core": "^3.9.3",
+    "date-fns": "^2.0.0-alpha.27",
     "electron-is-dev": "^1.0.1",
+    "material-ui-pickers": "^2.2.4",
+    "node-pre-gyp": "^0.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "sqlite3": "^4.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +50,7 @@
     "concurrently": "^4.1.0",
     "electron": "^4.1.4",
     "electron-builder": "^20.39.0",
+    "electron-rebuild": "^1.8.4",
     "wait-on": "^3.2.0"
   }
 }
