--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "date-fns": "^2.0.0-alpha.27",
     "electron-is-dev": "^1.0.1",
     "material-ui-pickers": "^2.2.4",
