--- a/package.json
+++ b/package.json
@@ -1,11 +1,36 @@
 {
   "name": "Closing-Notes",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "main": "src/electron.js",
+  "homepage": "./",
   "author": {
     "name": "Precinct 702",
     "email": "precinct0702@geeksquad.ca"
+  },
+  "build": {
+    "appId": "com.precinct.closingnotes",
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowElevation": true,
+      "allowToChangeInstallationDirectory": true,
+      "deleteAppDataOnUninstall": true,
+      "createDesktopShortcut": true,
+      "installerIcon": "build/Geek.ico",
+      "uninstallerIcon": "build/Geek.ico",
+      "uninstallDisplayName": "Uninstall Closing notes"
+    },
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    },
+    "win": {
+      "icon": "./build/Geek.ico"
+    }
   },
   "contributors": [
     {
@@ -30,14 +55,18 @@
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
     "sqlite3": "^4.0.6",
-    "sqlstring": "^2.3.1"
+    "sqlstring": "^2.3.1",
+    "typescript": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-dev": "concurrently \"yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-pack": "build -c.extraMetadata.main=build/electron.js",
+    "preelectron-pack": "yarn build",
+    "postinstall": "electron-builder install-app-deps"
   },
   "eslintConfig": {
     "extends": "react-app"
