--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-scripts": "2.1.8",
     "sqlite3": "^4.0.6",
     "sqlstring": "^2.3.1",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "wouter": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
