--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "react-scripts": "2.1.8",
     "sqlite3": "^4.0.6",
     "sqlstring": "^2.3.1",
-    "typescript": "^3.4.3",
-    "wouter": "^1.1.0"
+    "typescript": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
