--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Closing-Notes",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "main": "public/electron.js",
   "homepage": "./",
@@ -44,11 +44,12 @@
   ],
   "dependencies": {
     "@date-io/date-fns": "^1.1.0",
-    "@material-ui/core": "^3.9.3",
+    "@date-io/core": "^1.3.6",
+    "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/pickers": "^3.0.0",
     "date-fns": "^2.0.0-alpha.27",
     "electron-is-dev": "^1.0.1",
-    "material-ui-pickers": "^2.2.4",
     "node-pre-gyp": "^0.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
