--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     }
   ],
   "dependencies": {
-    "@date-io/date-fns": "^1.1.0",
     "@date-io/core": "^1.3.6",
+    "@date-io/date-fns": "^1.1.0",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/pickers": "^3.0.0",
@@ -55,6 +55,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
+    "react-transition-group": "^4.1.0",
     "sqlite3": "^4.0.6",
     "sqlstring": "^2.3.1",
     "typescript": "^3.4.3"
